Add function ufc_signature() to the form compiler interface
Replaces ffc.jit_object.ufc_signature computed from snippets in
ffc.backends.ufc by ffc.ufc_signature() defined as SHA-1 hash of ufc.h.

--- a/cmake/templates/UFCConfig.cmake.in
+++ b/cmake/templates/UFCConfig.cmake.in
@@ -28,5 +28,8 @@ set(UFC_SWIG_EXECUTABLE "@SWIG_EXECUTABLE")
 # Version
 set(UFC_VERSION_STRING "@FULLVERSION")
 
+# Signature (SHA-1 hash of ufc.h)
+set(UFC_SIGNATURE "@UFC_SIGNATURE")
+
 # The location of the UseUFC.cmake file
 set(UFC_USE_FILE "@INSTALL_PREFIX/share/ufc/UseUFC.cmake")
