Add FFC dependencies to doc requirements.txt (until FFC gets its own proper requirements.txt file).

--- a/doc/sphinx/requirements.txt
+++ b/doc/sphinx/requirements.txt
@@ -1,2 +1,5 @@
+numpy
+git+https://bitbucket.org/fenics-project/instant.git
+git+https://bitbucket.org/fenics-project/ufl.git
 git+https://bitbucket.org/fenics-project/ffc.git
 git+https://bitbucket.org/fenics-project/ufl.git
