--- a/doc/sphinx/requirements.txt
+++ b/doc/sphinx/requirements.txt
@@ -1,1 +1,1 @@
--e git+https://bitbucket.org/fenics-project/ffc.git#egg=ffc
+-e git+https://bitbucket.org/fenics-project/ffc.git@garth/read-the-docs#egg=ffc
