--- a/doc/sphinx/requirements.txt
+++ b/doc/sphinx/requirements.txt
@@ -1,2 +1,3 @@
--e git+https://bitbucket.org/fenics-project/ffc.git@0502158682f117d2599149f0d53e6cd41411da89#egg=ffc
+-e git+https://bitbucket.org/fenics-project/ufl.git#egg=ufl
+-e git+https://bitbucket.org/fenics-project/ffc.git#egg=ffc
 numpy
