--- a/release.conf
+++ b/release.conf
@@ -7,6 +7,7 @@ FILES="ChangeLog \
        setup.py \
        ffc/__init__.py \
        ufc/ufc.h \
+       uflacs/__init__.py \
        ffc/backends/ufc/__init__.py \
        ffc/backends/ufc/dofmap.py \
        ffc/backends/ufc/finite_element.py \
