Update version number to 2016.1.0

--- a/release.conf
+++ b/release.conf
@@ -23,9 +23,10 @@ pre-release()
     PYVER=$(python -c 'import sys; print(".".join(map(str, sys.version_info[:2])))')
     export PYTHONPATH=$PWD/local/lib/python$PYVER/site-packages:$PYTHONPATH
     export PATH=$PWD/local/bin:$PATH
+    export PKG_CONFIG_PATH=$PWD/local/lib/pkgconfig:$PKG_CONFIG_PATH
     echo "Running regression tests"
     cd test/regression
-    python test.py --generate-only
+    python test.py --skip-run
     less error.log
     echo "Only version numbers should differ, press return to continue"
     read
