Switch test image

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,11 +1,11 @@
-image: python:2.7
+image: ubuntu:16.04
 
 pipelines:
   default:
     - step:
         script:
           - apt-get update
-          - apt-get install -y g++ cmake libboost-math-dev --no-install-recommends
+          - apt-get install -y python-pip python-setuptool python-wheel git cmake g++ swig make --no-install-recommends
           - pip install git+https://bitbucket.org/fenics-project/fiat.git@master
           - pip install git+https://bitbucket.org/fenics-project/ufl.git@master
           - pip install git+https://bitbucket.org/fenics-project/instant.git@master
