--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,12 +12,14 @@ pipelines:
           - pip install pytest
           - pip install --verbose .
           - cd test
-          - py.test -v ./unit/misc/
+          - py.test -v ./unit/
           - py.test -v ./uflacs/unit/
   branches:
     next:
       - step:
           script:
+            - apt-get update
+            - apt-get install -y cmake g++ git make python-dev python-pip python-setuptools python-wheel swig --no-install-recommends
             - pip install git+https://bitbucket.org/fenics-project/fiat.git@next
             - pip install git+https://bitbucket.org/fenics-project/ufl.git@next
             - pip install git+https://bitbucket.org/fenics-project/instant.git@next
