--- a/ffc/ufc_config.py.in
+++ b/ffc/ufc_config.py.in
@@ -1,4 +1,4 @@
-# Copyright (C) 2016 Jan Blechta
+# Copyright (C) 2016 Jan Blechta, Johannes Ring
 #
 # This file is part of FFC.
 #
@@ -15,10 +15,33 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with FFC. If not, see <http://www.gnu.org/licenses/>.
 
-def ufc_signature():
+def get_ufc_include():
+    """Return the include dir to ufc.h.
+
+    In this implementation, the value is computed at build time,
+    see setup.py.
+    """
+    return "@INSTALL_PREFIX/include"
+
+
+def get_ufc_cxx_flags():
+    """Return C++ flags for compiling UFC C++11 code. Return type
+    is a list of strings.
+
+    In this implementation, the value is computed at build time,
+    see setup.py.
+    """
+    return "@CXX_FLAGS".split()
+
+
+def get_ufc_signature():
     """Return SHA-1 hash of the contents of ufc.h.
 
     In this implementation, the value is computed at build time,
     see setup.py.
     """
     return "@UFC_SIGNATURE"
+
+
+# ffc_signature() already introduced to FFC standard in 1.7.0dev
+ufc_signature = get_ufc_signature
