Cleanup in uflacs, mostly flake8 stuff.
Use find_packages in setup.py to reduce maintenance work when moving subpackages around.

Delete some unused code.
Remove unused imports.
Remove old unused default parameters.
Move crs to analysis/crsarray.py and rename to CRSArray.
Fix a bunch of flake8 complaints, a few of them bugs in corner cases.

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ install_manifest.txt
 /doc/sphinx/build
 /doc/sphinx/source/api-doc
 
+# Visual Studio Code project config
+.vscode
+
 # Tests
 **/.cache/
 /test/regression/error.log
