--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,7 +22,7 @@ pipelines:
             - apt-get install -y cmake g++ git make python-dev python-pip python-setuptools python-wheel swig --no-install-recommends
             - pip install git+https://bitbucket.org/fenics-project/fiat.git@next
             - pip install git+https://bitbucket.org/fenics-project/ufl.git@next
-            - pip install git+https://bitbucket.org/fenics-project/dijitso.git@master
+            - pip install git+https://bitbucket.org/fenics-project/dijitso.git@next
             - pip install pytest
             - pip install --verbose .
             - cd test
