--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,15 +5,25 @@ pipelines:
     - step:
         script:
           - apt-get update
-          - apt-get install -y cmake g++ git make python-dev python-pip python-setuptools python-wheel swig --no-install-recommends
-          - pip install git+https://bitbucket.org/fenics-project/fiat.git@master
-          - pip install git+https://bitbucket.org/fenics-project/ufl.git@master
-          - pip install git+https://bitbucket.org/fenics-project/dijitso.git@master
-          - pip install pytest
-          - pip install --verbose .
-          - cd test
-          - py.test -v ./unit
-          - py.test -v ./uflacs
+          - apt-get install -y
+              cmake g++ git make swig
+              python-dev python-pip python-setuptools python-wheel
+              python3-dev python3-pip python3-setuptools python3-wheel
+              --no-install-recommends
+          - pip2 install pytest
+          - pip2 install git+https://bitbucket.org/fenics-project/fiat.git@master
+          - pip2 install git+https://bitbucket.org/fenics-project/ufl.git@master
+          - pip2 install git+https://bitbucket.org/fenics-project/dijitso.git@master
+          - pip3 install pytest
+          - pip3 install git+https://bitbucket.org/fenics-project/fiat.git@master
+          - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@master
+          - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@master
+          - pip2 install --verbose .
+          - py.test -v ./test/unit
+          - py.test -v ./test/uflacs
+          - pip3 install --verbose .
+          - py.test-3 -v ./test/unit
+          - py.test-3 -v ./test/uflacs
   branches:
     next:
       - step:
