--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,8 +7,8 @@ pipelines:
           - apt-get update
           - apt-get install -y
               cmake g++ git make swig
-              python-dev python-pip python-setuptools python-wheel
-              python3-dev python3-pip python3-setuptools python3-wheel
+              python-dev python-flake8 python-pip python-setuptools python-wheel
+              python3-dev python3-flake8 python3-pip python3-setuptools python3-wheel
               --no-install-recommends
           - pip2 install pytest
           - pip2 install git+https://bitbucket.org/fenics-project/fiat.git@master
