--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,8 +19,8 @@ pipelines:
           - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@master
           - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@master
           - pip2 install --verbose .
-          - py.test -v ./test/unit
-          - py.test -v ./test/uflacs
+          - py.test-2.7 -v ./test/unit
+          - py.test-2.7 -v ./test/uflacs
           - pip3 install --verbose .
           - py.test-3 -v ./test/uflacs
   branches:
