--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,10 +18,10 @@ pipelines:
           - pip3 install git+https://bitbucket.org/fenics-project/fiat.git@master
           - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@master
           - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@master
-          - pip2 install --verbose .
+          - pip2 install --verbose -e .
           - python2 -m pytest -v ./test/unit
           - python2 -m pytest -v ./test/uflacs
-          - pip3 install --verbose .
+          - pip3 install --verbose -e .
           - python3 -m pytest -v ./test/uflacs
   branches:
     next:
