--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,10 +19,11 @@ pipelines:
           - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@master
           - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@master
           - pip2 install --verbose -e .
-          - python2 -m pytest -v ./test/unit
-          - python2 -m pytest -v ./test/uflacs
           - pip3 install --verbose -e .
-          - python3 -m pytest -v ./test/uflacs
+          - cd test
+          - python2 -m pytest -v ./unit
+          - python2 -m pytest -v ./uflacs
+          - python3 -m pytest -v ./uflacs
   branches:
     next:
       - step:
