More flake8 fixes.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [tool:pytest]
 norecursedirs=libs doc test/uflacs/crosslanguage/generated
 [flake8]
-ignore = E501,E203,E265,E701,E702,E703,E302,E402,E122,W503,E222,E303,E129,E251,E225,E221,W391,W291,E731,E272,E131,E115,E127,E261,E128,E202,W293,E231,E201,E266,E301,E262,E401,E124,E227
+ignore = E501,E203,E265,E701,E702,E703,E302,E402,E122,W503,E222,E303,E129,E251,E225,E221,W391,W291,E731,E272,E131,E115,E127,E261,E128,E202,W293,E231,E201,E266,E301,E262,E401,E124,E227,E126,E121,E704,E502,E241,E123,E226
 max-line-length = 100
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
 
