--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,7 @@ pipelines:
         script:
           - apt-get update
           - apt-get install -y
-              cmake g++ git make swig
+              cmake g++ git make
               python-dev python-flake8 python-pip python-setuptools python-wheel
               python3-dev python3-flake8 python3-pip python3-setuptools python3-wheel
               --no-install-recommends
@@ -30,7 +30,11 @@ pipelines:
       - step:
           script:
             - apt-get update
-            - apt-get install -y cmake g++ git make python-dev python-pip python-setuptools python-wheel swig --no-install-recommends
+            - apt-get install -y
+                cmake g++ git make
+                python-dev python-flake8 python-pip python-setuptools python-wheel
+                python3-dev python3-flake8 python3-pip python3-setuptools python3-wheel
+                --no-install-recommends
             - pip install git+https://bitbucket.org/fenics-project/fiat.git@next
             - pip install git+https://bitbucket.org/fenics-project/ufl.git@next
             - pip install git+https://bitbucket.org/fenics-project/dijitso.git@next
