--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,29 +1,20 @@
-image: ubuntu:16.04
+image: quay.io/fenicsproject/pipelines
 
 pipelines:
   default:
     - step:
         script:
-          - apt-get update
-          - apt-get install -y
-              cmake g++ git make
-              python-dev python-flake8 python-pip python-setuptools python-wheel
-              python3-dev python3-flake8 python3-pip python3-setuptools python3-wheel
-              --no-install-recommends
-          - pip2 install pytest
           - pip2 install git+https://bitbucket.org/fenics-project/fiat.git@master
           - pip2 install git+https://bitbucket.org/fenics-project/ufl.git@master
           - pip2 install git+https://bitbucket.org/fenics-project/dijitso.git@master
-          - pip3 install pytest
           - pip3 install git+https://bitbucket.org/fenics-project/fiat.git@master
           - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@master
           - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@master
           - pip2 install --verbose -e .
           - pip3 install --verbose -e .
-          - cd test
-          - python2 -m pytest -v ./unit
-          - python2 -m pytest -v ./uflacs
-          - python3 -m pytest -v ./uflacs
+          - python2 -m pytest -v ./test/unit
+          - python2 -m pytest -v ./test/uflacs
+          - python3 -m pytest -v ./test/uflacs
           - python -m flake8 ffc/
   branches:
     next:
