--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,26 +12,23 @@ pipelines:
           - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@master
           - pip2 install --verbose -e .
           - pip3 install --verbose -e .
+          - python -m flake8 ffc/
           - python2 -m pytest -v ./test/unit
           - python2 -m pytest -v ./test/uflacs
           - python3 -m pytest -v ./test/uflacs
-          - python -m flake8 ffc/
   branches:
     next:
       - step:
           script:
-            - apt-get update
-            - apt-get install -y
-                cmake g++ git make
-                python-dev python-flake8 python-pip python-setuptools python-wheel
-                python3-dev python3-flake8 python3-pip python3-setuptools python3-wheel
-                --no-install-recommends
-            - pip install git+https://bitbucket.org/fenics-project/fiat.git@next
-            - pip install git+https://bitbucket.org/fenics-project/ufl.git@next
-            - pip install git+https://bitbucket.org/fenics-project/dijitso.git@next
-            - pip install pytest
-            - pip install --verbose .
-            - cd test
-            - py.test -v ./unit/
-            - py.test -v ./uflacs
-            - python -m flake8 ffc/
+          - pip2 install git+https://bitbucket.org/fenics-project/fiat.git@next
+          - pip2 install git+https://bitbucket.org/fenics-project/ufl.git@next
+          - pip2 install git+https://bitbucket.org/fenics-project/dijitso.git@next
+          - pip3 install git+https://bitbucket.org/fenics-project/fiat.git@next
+          - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@next
+          - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@next
+          - pip2 install --verbose -e .
+          - pip3 install --verbose -e .
+          - python -m flake8 ffc/
+          - python2 -m pytest -v ./test/unit
+          - python2 -m pytest -v ./test/uflacs
+          - python3 -m pytest -v ./test/uflacs
