Update list of files to update in release config file

--- a/release.conf
+++ b/release.conf
@@ -3,11 +3,8 @@
 PACKAGE="ffc"
 BRANCH="master"
 FILES="ChangeLog \
-       README.rst \
-       setup.py \
        ffc/__init__.py \
-       ufc/ufc.h \
-       uflacs/__init__.py \
+       ffc/backends/ufc/ufc.h \
        ffc/backends/ufc/__init__.py \
        ffc/backends/ufc/dofmap.py \
        ffc/backends/ufc/finite_element.py \
