Update version number to 2016.2.0

--- a/release.conf
+++ b/release.conf
@@ -10,17 +10,20 @@ FILES="ChangeLog \
        ffc/backends/ufc/finite_element.py \
        ffc/backends/ufc/form.py \
        ffc/backends/ufc/function.py \
-       ffc/backends/ufc/integrals.py"
+       ffc/backends/ufc/integrals.py \
+       doc/sphinx/source/releases/next.rst \
+       doc/sphinx/source/releases.rst"
 
 pre-release()
 {
     # Update regression tests
     echo "Installing FFC locally"
-    python setup.py install --prefix=$PWD/local
     PYVER=$(python -c 'import sys; print(".".join(map(str, sys.version_info[:2])))')
     export PYTHONPATH=$PWD/local/lib/python$PYVER/site-packages:$PYTHONPATH
     export PATH=$PWD/local/bin:$PATH
     export PKG_CONFIG_PATH=$PWD/local/lib/pkgconfig:$PKG_CONFIG_PATH
+    mkdir -p $PWD/local/lib/python$PYVER/site-packages
+    python setup.py install --prefix=$PWD/local --single-version-externally-managed --record record.txt
     echo "Running regression tests"
     cd test/regression
     python test.py --skip-run
