Update release script [skip ci]

--- a/release.conf
+++ b/release.conf
@@ -2,8 +2,8 @@
 
 PACKAGE="ffc"
 BRANCH="master"
-FILES="ChangeLog \
-       ffc/__init__.py \
+FILES="ChangeLog.rst \
+       setup.py \
        ffc/backends/ufc/ufc.h \
        ffc/backends/ufc/__init__.py \
        ffc/backends/ufc/dofmap.py \
@@ -11,6 +11,7 @@ FILES="ChangeLog \
        ffc/backends/ufc/form.py \
        ffc/backends/ufc/function.py \
        ffc/backends/ufc/integrals.py \
+       ffc/backends/ufc/coordinate_mapping.py \
        doc/sphinx/source/releases/next.rst \
        doc/sphinx/source/releases.rst"
 
@@ -18,12 +19,13 @@ pre-release()
 {
     # Update regression tests
     echo "Installing FFC locally"
-    PYVER=$(python -c 'import sys; print(".".join(map(str, sys.version_info[:2])))')
+    PYTHON=${PYTHON:-"python3"}
+    PYVER=$(${PYTHON} -c 'import sys; print(".".join(map(str, sys.version_info[:2])))')
     export PYTHONPATH=$PWD/local/lib/python$PYVER/site-packages:$PYTHONPATH
     export PATH=$PWD/local/bin:$PATH
     export PKG_CONFIG_PATH=$PWD/local/lib/pkgconfig:$PKG_CONFIG_PATH
     mkdir -p $PWD/local/lib/python$PYVER/site-packages
-    python setup.py install --prefix=$PWD/local --single-version-externally-managed --record record.txt
+    ${PYTHON} setup.py install --prefix=$PWD/local --single-version-externally-managed --record record.txt
     echo "Running regression tests"
     cd test/regression
     python test.py --skip-run
