Exclude .pyc files in manifest file [skip ci]

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,3 +12,4 @@ recursive-include doc *
 recursive-include ffc *.in
 recursive-include libs *
 recursive-include test *
+global-exclude __pycache__ *.pyc
