--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,4 +12,6 @@ recursive-include doc *
 recursive-include ffc *.in
 recursive-include libs *
 recursive-include test *
+recursive-exclude test/regression/ffc-reference-data *
+recursive-exclude test/regression/output *
 global-exclude __pycache__ *.pyc
