Minor fix in release script [skip ci]

--- a/release.conf
+++ b/release.conf
@@ -28,7 +28,7 @@ pre-release()
     ${PYTHON} setup.py install --prefix=$PWD/local --single-version-externally-managed --record record.txt
     echo "Running regression tests"
     cd test/regression
-    python test.py --skip-run
+    ${PYTHON} test.py --skip-run
     less error.log
     echo "Only version numbers should differ, press return to continue"
     read
