--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,8 +10,8 @@ pipelines:
           - pip3 install git+https://bitbucket.org/fenics-project/fiat.git@master
           - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@master
           - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@master
-          - pip2 install .
-          - pip3 install .
+          - pip2 install -e .
+          - pip3 install -e .
           - python2 -m flake8 ffc/
           - python3 -m flake8 ffc/
           - python2 -m pytest -v ./test/unit
@@ -28,8 +28,8 @@ pipelines:
           - pip3 install git+https://bitbucket.org/fenics-project/fiat.git@next
           - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@next
           - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@next
-          - pip2 install .
-          - pip3 install .
+          - pip2 install -e .
+          - pip3 install -e .
           - python2 -m flake8 ffc/
           - python3 -m flake8 ffc/
           - python2 -m pytest -v ./test/unit
@@ -45,8 +45,8 @@ pipelines:
           - pip3 install git+https://bitbucket.org/fenics-project/fiat.git@maint
           - pip3 install git+https://bitbucket.org/fenics-project/ufl.git@maint
           - pip3 install git+https://bitbucket.org/fenics-project/dijitso.git@maint
-          - pip2 install .
-          - pip3 install .
+          - pip2 install -e .
+          - pip3 install -e .
           - python2 -m flake8 ffc/
           - python3 -m flake8 ffc/
           - python2 -m pytest -v ./test/unit
