Update pipelines to build bindings.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,8 +15,9 @@ pipelines:
           - python2 -m flake8 ffc/
           - python3 -m flake8 ffc/
           - python2 -m pytest -v ./test/unit
-          - python3 -m pytest -v ./test/unit
           - python2 -m pytest -v ./test/uflacs
+          - pip3 install libs/ufc_wrappers/
+          - python3 -m pytest -v ./test/unit
           - python3 -m pytest -v ./test/uflacs
   branches:
     next:
@@ -33,8 +34,9 @@ pipelines:
           - python2 -m flake8 ffc/
           - python3 -m flake8 ffc/
           - python2 -m pytest -v ./test/unit
-          - python3 -m pytest -v ./test/unit
           - python2 -m pytest -v ./test/uflacs
+          - pip3 install libs/ufc_wrappers/
+          - python3 -m pytest -v ./test/unit
           - python3 -m pytest -v ./test/uflacs
     maint:
       - step:
