--- a/shippable.yml
+++ b/shippable.yml
@@ -13,6 +13,10 @@ build:
     - pip install git+https://bitbucket.org/fenics-project/dijitso.git@master
     - pip install -e .
     - pip install libs/ufc_wrappers/
+
     - python -m flake8 ffc/
     - python -m pytest -v ./test/unit
     - python -m pytest -v ./test/uflacs
+
+    - cd test/regression
+    - python test.py
