--- a/shippable.yml
+++ b/shippable.yml
@@ -4,13 +4,15 @@ python:
   - 3.6
 
 build:
+  pre_ci:
+    if [ "$BRANCH" == "next" ] ; then export DEP_BRANCH_NAME="next" ; else export DEP_BRANCH_NAME="masster" ; fi
   ci:
     - apt-get -qq -y --no-install-recommends install cmake
     - pip install --upgrade pip
     - pip install flake8 pytest
-    - pip install git+https://bitbucket.org/fenics-project/fiat.git@master
-    - pip install git+https://bitbucket.org/fenics-project/ufl.git@master
-    - pip install git+https://bitbucket.org/fenics-project/dijitso.git@master
+    - pip install git+https://bitbucket.org/fenics-project/fiat.git@${DEP_BRANCH_NAME}
+    - pip install git+https://bitbucket.org/fenics-project/ufl.git@${DEP_BRANCH_NAME}
+    - pip install git+https://bitbucket.org/fenics-project/dijitso.git@${DEP_BRANCH_NAME}
     - pip install -e .
     - pip install libs/ufc_wrappers/
 
