--- a/shippable.yml
+++ b/shippable.yml
@@ -5,8 +5,10 @@ python:
 
 build:
   pre_ci:
-    if [ "$BRANCH" == "next" ] ; then export DEP_BRANCH_NAME="next" ; else export DEP_BRANCH_NAME="masster" ; fi
+
   ci:
+    if [ "$BRANCH" == "next" ] ; then export DEP_BRANCH_NAME="next" ; else export DEP_BRANCH_NAME="master" ; fi
+
     - apt-get -qq -y --no-install-recommends install cmake
     - pip install --upgrade pip
     - pip install flake8 pytest
