--- a/shippable.yml
+++ b/shippable.yml
@@ -12,9 +12,9 @@ build:
     - apt-get -qq -y --no-install-recommends install cmake
     - pip install --upgrade pip
     - pip install flake8 pytest
-    - pip install git+https://bitbucket.org/fenics-project/fiat.git@${DEP_BRANCH_NAME}
-    - pip install git+https://bitbucket.org/fenics-project/ufl.git@${DEP_BRANCH_NAME}
-    - pip install git+https://bitbucket.org/fenics-project/dijitso.git@${DEP_BRANCH_NAME}
+    - pip install git+https://bitbucket.org/fenics-project/fiat.git@"${DEP_BRANCH_NAME}"
+    - pip install git+https://bitbucket.org/fenics-project/ufl.git@"${DEP_BRANCH_NAME}"
+    - pip install git+https://bitbucket.org/fenics-project/dijitso.git@"${DEP_BRANCH_NAME}"
     - pip install -e .
     - pip install libs/ufc_wrappers/
 
