--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,12 @@ jobs:
           name: Install FFC
           command: pip3 install -e .
       - run:
-          name: Build pybind wrapper
+          name: Install pybind wrapper
           command: pip3 install libs/ufc_wrappers/
       - run:
+          name: Build and install test factory
+          command: |
+            python3 test/factory/generate_factory.py
+            pip3 install test/factory/
           name: Run unit tests
           command: python3 -m pytest -v ./test/unit
