--- a/shippable.yml
+++ b/shippable.yml
@@ -15,11 +15,9 @@ build:
     - pip install git+https://bitbucket.org/fenics-project/dijitso.git@"${DEP_BRANCH_NAME}"
 
     - pip install -e .
-    - pip install libs/ufc_wrappers/
+    - pip install libs/ffc-factory
 
     - python -m flake8 ffc/
-    - python test/factory/generate_factory.py
-    - pip install test/factory/
 
     - mkdir -p shippable/testresults
     - python -m pytest --junitxml=shippable/testresults/nosetests.xml ./test/unit
