--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,10 @@ jobs:
             sudo pip install cmake flake8 numpy pybind11 pytest six --upgrade
       - run:
           name: Install FIAT
-          command: pip install git+https://bitbucket.org/fenics-project/fiat.git@master --user
+          command: pip install git+https://bitbucket.org/fenics-project/fiat.git@jan/feature-cell-diameter --user
       - run:
           name: Install UFL
-          command: pip install git+https://bitbucket.org/fenics-project/ufl.git@master --user
+          command: pip install git+https://bitbucket.org/fenics-project/ufl.git@jan/feature-cell-diameter --user
       - run:
           name: Install Dijitso
           command: pip install git+https://bitbucket.org/fenics-project/dijitso.git@master --user
