--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,14 +12,12 @@ jobs:
             sudo apt-get update && sudo apt-get install libboost-math-dev
             sudo pip install cmake flake8 numpy pybind11 pytest six --upgrade
       - run:
-          name: Install FIAT
-          command: pip install git+https://bitbucket.org/fenics-project/fiat.git@master --user
-      - run:
-          name: Install UFL
-          command: pip install git+https://bitbucket.org/fenics-project/ufl.git@master --user
-      - run:
-          name: Install Dijitso
-          command: pip install git+https://bitbucket.org/fenics-project/dijitso.git@master --user
+          name: Install FEniCS dependencies
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "next" ] ; then export DEP_BRANCH_NAME="next" ; else export DEP_BRANCH_NAME="master" ; fi
+            pip install git+https://bitbucket.org/fenics-project/fiat.git@"${DEP_BRANCH_NAME}" --user
+            pip install git+https://bitbucket.org/fenics-project/ufl.git@"${DEP_BRANCH_NAME}" --user
+            pip install git+https://bitbucket.org/fenics-project/dijitso.git@"${DEP_BRANCH_NAME}" --user
       - run:
           name: Install FFC
           command: pip install -e . --user
