--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,14 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6
+      - image: circleci/python:3.7
     working_directory:  ~/ffc-test
     steps:
       - checkout
       - run:
-          name: Install dependencies  # Install with sudo as tests not run as superuser in circleci/python
+          name: Install dependencies
           command: |
-            sudo apt-get update && sudo apt-get install libboost-math-dev
+            sudo apt-get update && apt-get install libboost-math-dev
             sudo pip install cmake flake8 numpy pybind11 pytest six --upgrade
       - run:
           name: Install FEniCS dependencies
@@ -22,15 +22,19 @@ jobs:
           name: Install FFC
           command: pip install -e . --user
       - run:
-          name: Install pybind factory
-          command: pip install ./libs/ffc-factory/ --user
-      - run:
-          name: Run unit tests
-          command: |
-            python -m pytest -v ./test/unit
-            python -m pytest -v ./test/uflacs
-      - run:
-          name: Run regression tests
-          command: |
-            cd test/regression
-            python test.py
+          name: Run flake8 tests
+          command: python -m flake8 ffc/
+
+      #- run:
+      #    name: Install pybind factory
+      #    command: pip install ./libs/ffc-factory/ --user
+      #- run:
+      #    name: Run unit tests
+      #    command: |
+      #      python -m pytest -v ./test/unit
+      #      python -m pytest -v ./test/uflacs
+      #- run:
+      #    name: Run regression tests
+      #    command: |
+      #      cd test/regression
+      #      python test.py
