--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt-get update && apt-get install libboost-math-dev
+            sudo apt-get update && sudo apt-get install libboost-math-dev
             sudo pip install cmake flake8 numpy pybind11 pytest six --upgrade
       - run:
           name: Install FEniCS dependencies
