--- a/ffc/git_commit_hash.py.in
+++ b/ffc/git_commit_hash.py.in
@@ -15,8 +15,10 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with FFC. If not, see <http://www.gnu.org/licenses/>.
 
+
 def git_commit_hash():
-    """Return git changeset hash (returns "unknown" if changeset is
-    not known)
+    """Return git changeset hash (returns "unknown" if changeset is not
+    known)
+
     """
     return "@GIT_COMMIT_HASH"
