Update copyright notices.
- Also add settings for yapf.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [tool:pytest]
 norecursedirs=libs doc test/uflacs/crosslanguage/generated
+
 [flake8]
 max-line-length = 100
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
@@ -10,3 +11,9 @@ ignore =
     E265,E402,E126,E501,
     # TODO: Probably not important
     W503
+
+[yapf]
+column_limit = 100
+#based_on_style = pep8
+#spaces_before_comment = 4
+#split_before_logical_operator = true
