Re-enable some flake8 checks.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,7 @@ norecursedirs=libs doc test/uflacs/crosslanguage/generated
 max-line-length = 100
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
 ignore =
-    # TODO: Enable these after fixing one by one, these may hide bugs
-    F401,F841,
-    # TODO: Some of these may also be important
+    # TODO: Some of these may be important
     E265,E402,E126,E501,
     # TODO: Probably not important
     W503
