Enable more flake9 tests.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,9 @@
 norecursedirs=libs doc test/uflacs/crosslanguage/generated
 
 [flake8]
-max-line-length = 100
+max-line-length = 120
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
-ignore =
-    # TODO: Some of these may be important
-    E265,E402,E126,E501,
-    # TODO: Probably not important
-    W503
+ignore = W503  # Line length
 
 [yapf]
 column_limit = 100
