--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,9 @@ column_limit = 100
 #based_on_style = pep8
 #spaces_before_comment = 4
 #split_before_logical_operator = true
+
+[pydocstyle]
+# Work on removing these ignores
+ignore = D100,D101,D102,D103,D104,D105,D107,D200,D202,D203,D204,D205,D209,
+         D211,D212,D213, D300,D400,D402,D401,D404
+#convention = numpy
