--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ column_limit = 100
 [pydocstyle]
 # Work on removing these ignores
 ignore = D100,D101,D102,D103,D104,D105,D107,
-         D200,D202,D203,D204,D205,D209,D211,D212,D213,
+         D200, D202,
+         D203,  # this error should be disabled
+         D205,D209,D213,
          D401,D400,D402
 #convention = numpy
