--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           name: Install dependencies
           command: |
             sudo apt-get update && sudo apt-get install libboost-math-dev
-            sudo pip install cffi flake8 pydocstyle pytest coverage --upgrade
+            sudo pip install cffi flake8 pydocstyle pytest coverage coveralls --upgrade
       - run:
           name: Install FEniCS dependencies
           command: |
@@ -28,4 +28,6 @@ jobs:
           command: python -m pydocstyle ffc/
       - run:
           name: Run unit tests
-          command: coverage run --source ffc -m pytest test/
+          command: |
+            coverage run --source ffc -m pytest test/
+            coveralls
